# LAC_ai

./: .env.example  .gitignore  Assignment.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: corpus.jsonl  title_list.json
eval/: queries.json  results.md  results_bge_base.md  run_eval.py
scripts/: fetch_title_list.py  smoke_qa.py  smoke_search.py
src/lac_ai/: __init__.py  api.py  chunking.py  cli.py  config.py  embed.py  embedders.py  generate.py  ingest.py  retrieve.py
tests/: conftest.py  test_api.py  test_chunking.py  test_embed.py  test_generate.py  test_retrieve.py
